Fix bad background on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,6 @@ h1, h2, h3 {
         padding: 0;
         width: 100%;
         border: none;
-        background-color: transparent;
     }
 
     .section {
